# Localization

./: README.md
src/imageprocessor/: package.xml  setup.cfg  setup.py
src/imageprocessor/imageprocessor/: localisation_client.py  pixelator.py  util.py  visualizer.py
src/localizer/: CMakeLists.txt  genetic.cpp  package.xml
src/localizer/src/: genetic.cpp
src/localizer/srv/: Localisation.srv
